tests/negative/semantic/array_push_string_into_bool/input.ci
void main() {
    bool[] xs = [true];
    arrayPush(xs, "oops");
}
